<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_back"
    android:orientation="vertical" >

     <Button
            android:id="@+id/infoSorgula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/icon_info" />
     
    
    <TextView
        android:id="@+id/editAciklama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp"
        android:text="@string/chpAciklama"
        android:textColor="@color/beyaz_opacity" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editSorgu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:ellipsize="end"
          	android:gravity="center"
            android:hint="@string/sorguHint"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="18sp"
            android:width="300dp" />

        <EditText
            android:id="@+id/editBabaAdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:ems="10"
          	android:ellipsize="end"
          	android:gravity="center" 
            android:hint="@string/babaAdiHint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="18sp"
            android:width="300dp" />

        <Button
            android:id="@+id/btnSorgula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/sorgula_butonu"
            android:text="@string/sorgula"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>